# visualbase

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/visualbase/: __init__.py  api.py  cli.py  daemon.py  types.py  webrtc.py
src/visualbase/core/: __init__.py  buffer.py  frame.py  ring_buffer.py  sampler.py  timestamp.py
src/visualbase/ipc/: __init__.py  factory.py  fifo.py  interfaces.py  messages.py  uds.py  zmq_transport.py
src/visualbase/packaging/: __init__.py  clipper.py  trigger.py
src/visualbase/process/: __init__.py  ingest.py
src/visualbase/sources/: __init__.py  base.py  camera.py  decoder.py  file.py  rtsp.py
src/visualbase/streaming/: __init__.py  fanout.py
src/visualbase/tools/: __init__.py  viewer.py
tests/: test_camera_source.py  test_daemon.py  test_file_source.py  test_ipc.py  test_ring_buffer.py  test_rtsp_source.py  test_trigger_clip.py  test_zmq_transport.py
